--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
 
     <p2 id="Manifest">You Own: <br>Clicks: 1</p2>
 
+    <p3 id="GenInfo">Generators: 0<br>GenTick: $1<br>Gentime: 4s<br>$0/Sec</p3>
+
     <input id="Click" type="button" value="Click"/>
     <input id="Clickx5" type="button" value="Click x5"/>
     <input id="UpgradeClick" type="button" value="+1 Click   $25" onclick="UpgradeClick();" />
     <input id="Gen" type="button" value="+1 Gen   $"/>
-
+    <input id="UpgradeGenProfit" type="button" value="+$1 Gen Profit   $250"/>
+    
+    
     <script>
     document.getElementById("Click").onclick = Click;
     document.getElementById("Clickx5").onclick = Clickx5;
     document.getElementById("Gen").onclick = BuyGen;
+    document.getElementById("UpgradeGenProfit").onclick = UpgradeGenProfit;
     </script>
     <script>
     document.addEventListener('DOMContentLoaded', Start())
