--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <script>
     document.addEventListener('DOMContentLoaded', Start())
     {
-        alert("Loaded");
+        //alert("Loaded");
     }
     </script>
+    <p30>Ver 0.1b<br>Made by kubotron17</p30>
 </body>
 
 </html>
