--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         //alert("Loaded");
     }
     </script>
-    <p30>Ver 0.1b<br>Made by kubotron17</p30>
+    <p30>Ver 0.1c<br>Made by kubotron17</p30>
 </body>
 
 </html>
